# Spectramind

./: CLI_Symbolic_Debugger.py  GLL_Score_Evaluator.py  GLL_Score_Evaluator_CLI.py  LICENSE  Makefile  Makefile.dev  Makefile.release  Multi-Instrument_Profile_Switcher.py  README.md  README_CLI.md  README_SpectraMind_V50_FULL.md  Spectramind_Autocomplete.sh  Transit_Stack_Generator.py  airs_gnn.py  analyze_failure_log.py  auto_ablate_v50.py  calibrate_binwise_corel.py  calibrate_v50.py  calibration_checker.py  calibration_pipeline.py  check_submission_format.py  cli_bundle_v50.py  cli_core_v50.py  cli_diag.py  cli_diagnose_sigma.py  cli_dispatcher.py  cli_explain_util.py  cli_guardrails.py  cli_main.py  cli_submit.py  cli_v50.py  cli_validate.py  cli_validate_sigma.py  cli_version_registry.py  config_v50.json  config_v50.yaml  constraint_violation_log.json  constraint_violation_overlay.py  contrastive_pretrain_v50.py  corel.py  (+115 more)
.github/workflows/: ci_pipeline.yml  spectramind-ci.yml
configs/: config_v50.yaml
configs/data/: challenge.kaggle.yaml  challenge.local.yaml  challenge.yaml  v50.yaml
configs/diagnostics/: v50.yaml
configs/logging/: v50.yaml
configs/model/: airs.yaml  decoder.yaml  fgs1.yaml  v50.yaml
configs/paths/: v50.yaml
configs/repro/: v50.yaml
configs/training/: curriculum.yaml  supervised.yaml  v50.yaml
docs/: CLI_REFERENCE.md  GETTING_STARTED.md  PROGRAMMING_PROTOCOL.md  data_sources.md  symbolic_rule_to_module_map.md
docs/code_reference/: analyze_fft_autocorr_mu.py  cli_symbolic_debug.py
kaggle/: SpectraMindV50.ipynb  bootstrap_cell.sh
scripts/: ablation_summary_plot.py  auto_ablate_v50.py  cli_symbolic_debugger.py  generate_submission_package.py  gll_metric_v50.py  submission_validator_v50.py  transit_stack_generator.py
src/spectramind/calibration/: calibrate_instance_level.py  spectral_conformal.py  temperature_scaling.py
src/spectramind/cli/: cli_core_v50.py  cli_diagnose.py  cli_submit.py  cli_v50.py  commands.py  main.py  selftest.py  symbolic_debugger.py
src/spectramind/core/: airs_gnn.py  fgs1_mamba.py  flow_uncertainty_head.py  model_v50_ar.py  multi_scale_decoder.py
src/spectramind/datasets/: ariel_mae_dataset_v50.py
src/spectramind/diagnostics/: analyze_fft_autocorr_mu.py  coherence_curve_plot.py  fft_variance_heatmap.py  generate_diagnostic_summary.py  generate_html_report.py  gll_metric_v50.py  plot_gll_heatmap_per_bin.py  plot_quantiles_vs_target.py  plot_tsne_v50.py  plot_umap_v50.py  shap_attention_overlay.py  shap_overlay.py  symbolic_violation_html_summary.py  symbolic_violation_overlay.py  transit_stack_generator.py
src/spectramind/evaluation/: gll_metric_v50.py  validate.py
src/spectramind/inference/: predict_v50.py
src/spectramind/models/: airs_gnn.py  fgs1_mamba.py  flow_uncertainty_head.py  multi_scale_decoder.py
src/spectramind/scripts/: bootstrap_kaggle_env.sh  bootstrap_ubuntu_env.sh  check_submission_bundle.py  generate_submission_package.py
src/spectramind/symbolic/: auto_symbolic_rule_miner.py  multi_instrument_profile_switcher.py  symbolic_loss.py
src/spectramind/training/: ariel_mae_dataset_v50.py  train_v50.py
src/spectramind/utils/: config.py  io.py  ripple_logger.py
tests/: test_cli.py
