[tool.poetry]
name = "spectramind-v50"
version = "0.1.0"
description = "SpectraMind V50: Scientific AI pipeline for exoplanet atmospheric spectra recovery (NeurIPS 2025 Ariel Challenge)"
authors = ["Andy Barta <andy@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "spectramind", from = "src/spectramind" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Core Scientific Stack
torch = { version = "^2.1", source = "pytorch" }
numpy = "^1.25"
pandas = "^2.1"
scipy = "^1.11"
matplotlib = "^3.7"
tqdm = "^4.66"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"

# CLI & Config Management
typer = "^0.9"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"

# Workflow & Experiment Tracking
mlflow = "^2.4"
optuna = "^3.5"
dvc = "^3.50"
lakefs = "^0.97"

# Deep Learning and Sequence Models
transformers = "^4.39"
datasets = "^2.18"
accelerate = "^0.27"

# Graph Neural Networks
torch-geometric = "^2.4"
torch-scatter = "^2.1.2"
torch-sparse = "^0.6.18"

# Symbolic AI and Logic Tools
shap = "^0.44.1"
networkx = "^3.2.1"
sympy = "^1.12"

# Diagnostics & Visual Analysis
umap-learn = "^0.5.5"
plotly = "^5.20.0"
seaborn = "^0.12.2"
pyfftw = "^0.13.1"

# Web UI & FastAPI Dashboard (Optional)
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
starlette = "^0.37.2"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"

# Interactivity & Reporting
markdown = "^3.6"
rich = "^13.7.0"
jinja2 = "^3.1.3"
dominate = "^2.9.1"

# External Model (Mamba SSM)
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"
pre-commit = "^3.5.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
